--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -5,6 +5,10 @@
   color: rgb(72, 11, 72);
 }
 
+body {
+  background-color: white;
+}
+
 @keyframes fadeIn {
     from { opacity: 0; transform: translateY(10px); }
     to { opacity: 1; transform: translateY(0); }
